; ModuleID = '/home/carl/AnghaBench/git/extr_wrapper.c_warn_on_fopen_errors.c'
source_filename = "/home/carl/AnghaBench/git/extr_wrapper.c_warn_on_fopen_errors.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i64 0, align 8
@ENOENT = common dso_local global i64 0, align 8
@ENOTDIR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @warn_on_fopen_errors(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i64, i64* @errno, align 8
  %5 = load i64, i64* @ENOENT, align 8
  %6 = icmp ne i64 %4, %5
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load i64, i64* @errno, align 8
  %9 = load i64, i64* @ENOTDIR, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %14

11:                                               ; preds = %7
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @warn_on_inaccessible(i8* %12)
  store i32 -1, i32* %2, align 4
  br label %15

14:                                               ; preds = %7, %1
  store i32 0, i32* %2, align 4
  br label %15

15:                                               ; preds = %14, %11
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @warn_on_inaccessible(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
